test/compile_errors/err_multi_index_missing_read_method.w
//! expect-check-fail: missing multi_index method required by MultiIndex

type Tensor { value: i32 }

fn main:
    let t = Tensor { value: 1 }
    let _ = t[0, 0]
